@@ -62,39 +62,55 @@ choice
 config FREQ_200_100_50
 	bool "FCLK 200 MHz - HCLK 100 MHz - PCLK 50MHz"
 	help
-	  This setting configures the PLL GCLK frequency to 199.9872MHz.
+	  This setting configures the PLL GCLK frequency to 199.9872 MHz.
 	  FCLK is GCLK; HCLK is FCLK/2; PCLK is HCLK/2.  This is the
 	  default setting and is known to work reliably on the LPD
 	  CardEngines.
 
 config FREQ_200_66_33
-	bool "FCLK 200 MHz - HCLK  66 MHz - PCLK 33MHz"
+	bool "FCLK 200 MHz - HCLK  66 MHz - PCLK 33 MHz"
 	help
-	  This setting configures the PLL GCLK frequency to 199.9872MHz.
+	  This setting configures the PLL GCLK frequency to 199.9872 MHz.
 	  FCLK is GCLK; HCLK is FCLK/3; PCLK is HCLK/2.  This is the
 	  default setting for the Trouncer which requires a slow PCLK
 	  for the sake of peripherals.
 
 config FREQ_240_120_60
-	bool "FCLK 240 MHz - HCLK 120 MHz - PCLK 60MHz"
+	bool "FCLK 240 MHz - HCLK 120 MHz - PCLK 60 MHz"
 	help
-	  This setting configures the PLL GCLK frequency to 239.616MHz.
+	  This setting configures the PLL GCLK frequency to 239.616 MHz.
+	  FCLK is GCLK; HCLK is FCLK/2; PCLK is HCLK/2.  This is an
+	  overclocking confguration that may be unstable with
+	  unqualified parts.
+
+config FREQ_250_125_63
+	bool "FCLK 250 MHz - HCLK 125 MHz - PCLK 63 MHz"
+	help
+	  This setting configures the PLL GCLK frequency to 249.8991 MHz.
+	  FCLK is GCLK; HCLK is FCLK/2; PCLK is HCLK/2.  This is an
+	  overclocking confguration that may be unstable with
+	  unqualified parts.
+
+config FREQ_266_133_66
+	bool "FCLK 266 MHz - HCLK 133 MHz - PCLK 66 MHz"
+	help
+	  This setting configures the PLL GCLK frequency to 265.4218 MHz.
 	  FCLK is GCLK; HCLK is FCLK/2; PCLK is HCLK/2.  This is an
 	  overclocking confguration that may be unstable with
 	  unqualified parts.
 
 config FREQ_100_100_50
-	bool "FCLK 100 MHz - HCLK 100 MHz - PCLK 50MHz"
+	bool "FCLK 100 MHz - HCLK 100 MHz - PCLK 50 MHz"
 	help
-	  This setting configures the PLL GCLK frequency to 99.9936MHz.
+	  This setting configures the PLL GCLK frequency to 99.9936 MHz.
 	  FCLK is GCLK; HCLK is FCLK; PCLK is HCLK/2.  With this
 	  setting, the CPU will run in FastBus mode instead of
 	  Synchronous mode.
 
 config FREQ_150_75_37
-	bool "FCLK 150 MHz - HCLK  75 MHz - PCLK 37MHz"
+	bool "FCLK 150 MHz - HCLK  75 MHz - PCLK 37 MHz"
 	help
-	  This setting configures the PLL GCLK frequency to 150.0891MHz.
+	  This setting configures the PLL GCLK frequency to 150.0891 MHz.
 	  FCLK is GCLK; HCLK is FCLK/2; PCLK is HCLK/2.
 
 endchoice 
