@@ -1,3 +1,13 @@
+2006-03-16  Marc Singer  <elf@buici.com>
+
+	* src/mach-lh7a40x/freq: Perl script that aids in finding clock
+	frequency dividers.
+
+	* src/mach-lh7a40x/Kconfig: Added more overclocking frequencies to
+	the lh7a40x configuration.
+
+	* Brought Kconfig sources up to date.
+
 2006-03-15  Marc Singer  <elf@buici.com>
 
 	* Makefile: 1.3.20
